# MicSounds

./: CMakeLists.txt  README.md  replace_dll.bat
lib/: zita-resampler.lib
src/: ChatSoundConverter.cpp  ChatSoundConverter.h  FakeMic.cpp  SteamVoiceEncoder.cpp  SteamVoiceEncoder.h  main.cpp  main.h  meta_utils.cpp  micsounds.cpp  misc_utils.cpp  misc_utils.h  vectors.cpp  vectors.h
